samples/errors/empty_input_configuration.sara
$exemple1 (input)()(output) :=
  auto {
    state state1, state2  ;
    first state1 ;
    state1 : none & ~output {
      ~ input goto state2 ;
    }
    state2 : all & ~output {
      ~ input goto state1 ;
    }
  }
;
